<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="@dimen/activity_vertical_margin"
>


	<android.support.v7.widget.CardView android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:cardBackgroundColor="#607D8B"
			app:cardCornerRadius="8dp"
			app:cardElevation="5dp"

	>

		<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@id/btn_sale_tickets"
				android:background="?attr/selectableItemBackground"
				android:padding="@dimen/activity_vertical_margin">
			<ImageView
					android:layout_width="60dp"
					android:tint="@color/white"
					android:layout_height="60dp" app:srcCompat="@drawable/ic_bus_side_view"
					tools:layout_editor_absoluteY="17dp" tools:layout_editor_absoluteX="24dp"
			/>
			<TextView
					android:text="@string/strmm_busticket_sale"
					android:gravity="center"
					android:textSize="20sp"
					android:layout_width="match_parent"
					android:textColor="@color/white"
					android:layout_height="61dp" tools:layout_editor_absoluteY="16dp"
					tools:layout_editor_absoluteX="92dp"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>
	<android.support.v7.widget.CardView android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:cardCornerRadius="8dp"
			app:cardElevation="5dp"
			android:layout_marginTop="8dp"
			app:cardBackgroundColor="@color/material_teal"

	>

		<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/btn_three_day_sales"
				android:background="?attr/selectableItemBackground"
				android:padding="@dimen/activity_vertical_margin">
			<ImageView
					android:layout_width="60dp"
					android:tint="@color/white"
					android:layout_height="60dp"
					app:srcCompat="@drawable/ic_badge"
					tools:layout_editor_absoluteY="17dp" tools:layout_editor_absoluteX="24dp"
			/>
			<TextView

					android:text="@string/strmm_sale"
					android:gravity="center"
					android:textSize="20sp"
					android:layout_width="match_parent"
					android:textColor="@color/white"
					android:layout_height="61dp" tools:layout_editor_absoluteY="16dp"
					tools:layout_editor_absoluteX="92dp"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
			android:layout_marginTop="8dp"
			android:layout_width="match_parent"
			app:cardBackgroundColor="@color/accent"
			android:layout_height="wrap_content"
			app:cardCornerRadius="8dp"
			app:cardElevation="5dp"

	>

		<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txt_agent_deposit"
				android:background="?attr/selectableItemBackground"
				android:padding="@dimen/activity_vertical_margin"
		>
			<ImageView
					android:layout_width="60dp"
					android:tint="@color/white"
					android:layout_height="60dp" app:srcCompat="@drawable/ic_assignment_black_24dp"
					tools:layout_editor_absoluteY="17dp" tools:layout_editor_absoluteX="24dp"
			/>
			<TextView
					android:text="ေငြေပးရန္က်န္ေသာစရင္"
					android:gravity="center"
					android:textSize="20sp"
					android:layout_width="match_parent"
					android:textColor="@color/white"
					android:layout_height="61dp" tools:layout_editor_absoluteY="16dp"
					tools:layout_editor_absoluteX="92dp"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView

			android:layout_marginTop="8dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:cardBackgroundColor="#795548"
			app:cardCornerRadius="8dp"
			app:cardElevation="5dp"
	>

		<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/text_view_fill_deposit"
				android:background="?attr/selectableItemBackground"
				android:padding="@dimen/activity_vertical_margin">
			<ImageView
					android:layout_width="60dp"
					android:tint="@color/white"
					android:layout_height="60dp" app:srcCompat="@drawable/ic_safebox"
					tools:layout_editor_absoluteY="17dp" tools:layout_editor_absoluteX="24dp"
			/>
			<TextView
					android:text="@string/strmm_pre_deposit"
					android:gravity="center"
					android:textSize="20sp"
					android:layout_width="match_parent"
					android:textColor="@color/white"
					android:layout_height="61dp" tools:layout_editor_absoluteY="16dp"
					tools:layout_editor_absoluteX="92dp"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>


	<android.support.v7.widget.CardView android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:cardBackgroundColor="@color/primary_dark"
			app:cardCornerRadius="8dp"
			app:cardElevation="5dp"
	>

		<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?attr/selectableItemBackground"
				android:id="@+id/invoices"
				android:padding="@dimen/activity_vertical_margin">
			<ImageView
					android:layout_width="60dp"
					android:tint="@color/white"
					android:layout_height="60dp" app:srcCompat="@drawable/ic_credit_card_and_purchase_receipt"
					tools:layout_editor_absoluteY="17dp" tools:layout_editor_absoluteX="24dp"
			/>
			<TextView
					android:text="@string/strmm_invoice"
					android:gravity="center"
					android:textSize="20sp"
					android:layout_width="match_parent"
					android:textColor="@color/white"

					android:layout_height="61dp" tools:layout_editor_absoluteY="16dp"
					tools:layout_editor_absoluteX="92dp"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>
</LinearLayout>